#////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
#//                                                                                                                //
#//                                                N O T I C E                                                     //
#//                                                                                                                //
#// This source has been modified on Sept. 2, 2021 by Jerry D. Harthcock to support the SYMPL Compute Engine ISA   //
#// and embedded source-level debugger.  This modified version can be found at https://github.com/jerry-d          //
#//                                                                                                                //
#// The original version 00.11.10 of this source can be found at https://github.com/hlorenzi/customasm             //
#//                                                                                                                //
#// This and the original version of this source is licensed under Apache License 2.0, January 2004                //
#// A copy of said license can be found at http://www.apache.org/licenses/                                         //
#//                                                                                                                //
#////////////////////////////////////////////////////////////////////////////////////////////////////////////////////

[package]
name = "customasm_modified_for_SYMPL_Compute_Engines"
version = "0.11.100"
edition = "2018"
authors = ["hlorenzi <https://hlorenzi.com>"]
description = "An assembler for custom, user-defined instruction sets!"
homepage = "https://github.com/hlorenzi/customasm or https://github.com/jerry-d"
repository = "https://github.com/hlorenzi/customasm or https://github.com/jerry-d"
readme = "README.md"
license = "Apache-2.0"
keywords = ["asm", "assembler", "assembly", "custom"]
categories = ["command-line-utilities", "hardware-support"]
exclude = ["web/*"]
build = "src/build.rs"

[lib]
crate-type = ["lib", "cdylib"]
name = "customasm"
path = "src/lib.rs"

[[bin]]
name = "customasm"
path = "src/main.rs"

[dependencies]
getopts = "0.2.17"
num-bigint = { version = "0.1", default_features = false }
num-traits = { version = "0.1", default_features = false }
num-integer = { version = "0.1", default_features = false }

[dev-dependencies]
sha2 = "0.9.1"

[build-dependencies]
vergen = "3.1.0"